--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   </title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body style="height: 100%">
+  <div id="root" style='display:flex; height:100%'></div>
 </body>
 
 </html>
